# speak-easy

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  changelog.rss  index.html  oranda.json
.github/workflows/: release.yml  web.yml
changelog/: index.html
src/: formatter.rs  lib.rs  processor.rs  speak_easy.rs
